changes before migrationsDb

--- a/src/Web/appsettings.json
+++ b/src/Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "dufeeWebAppDBConnectionString": "Data Source=duffeeWebApp.db"
+  },
   "AllowedHosts": "*"
 }
